# mago_fmt

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  test.yml
extra/: mago_fmt_node.js  mago_fmt_vite.js
scripts/: build.sh  package.mjs
src/: lib.rs
test_bun/: bun.spec.ts
test_deno/: deno.test.ts
test_node/: test-node.mjs
test_utils/: index.js
tests/: mod.rs
tests/cases/align_array_like/: after.php  before.php
tests/cases/align_assignment_like/: after.php  before.php
tests/cases/align_class_constants/: after.php  before.php
tests/cases/align_class_properties/: after.php  before.php  settings.inc
tests/cases/align_enum_cases/: after.php  before.php
tests/cases/align_global_constants/: after.php  before.php  settings.inc
tests/cases/align_modifier_breaking/: after.php  before.php
tests/cases/align_run_breaking/: after.php  before.php
tests/cases/align_statement_like/: after.php  before.php
tests/cases/align_variable_assignments/: after.php  before.php
tests/cases/array_preserve_empty_lines/: after.php  before.php
tests/cases/attributes/: after.php  before.php  settings.inc
tests/cases/blank_line_between_same_symbols_disabled/: after.php  before.php  settings.inc
tests/cases/breaking_named_arguments/: settings.inc
tests/cases/chain_comments/: after.php
tests/cases/class_member_format_ignore_block_comment/: after.php
tests/cases/class_member_format_ignore_docblock/: after.php
tests/cases/class_member_format_ignore_hash_comment/: before.php
tests/cases/issue_122/: after.php
(+128 files in other folders)
